Fixed some alignment issues, removed the 2nd slider and made it static

--- a/css/style.css
+++ b/css/style.css
@@ -8802,7 +8802,7 @@ h1, h2, h3, h4, h5,
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   -ms-border-radius: 5px;
-  border-radius: 5px; }
+  border-radius: 20px; }
   .resume-wrap .date {
     font-weight: 900;
     font-size: 26px;
@@ -8939,7 +8939,8 @@ h1, h2, h3, h4, h5,
   height: 285px;
   margin-bottom: 30px;
   position: relative;
-  z-index: 0; }
+  z-index: 0; 
+  border-radius: 20px; }
   .project.img-2 {
     height: 600px; }
     @media (max-width: 767.98px) {
@@ -8970,7 +8971,7 @@ h1, h2, h3, h4, h5,
     bottom: 0;
     content: '';
     opacity: 0;
-    background: #ffbd39;
+    background: #000000ba;
     z-index: -1;
     -moz-transition: all 0.3s ease;
     -o-transition: all 0.3s ease;
